--- a/Services/Checkout/Checkout.API/Checkout.API.csproj
+++ b/Services/Checkout/Checkout.API/Checkout.API.csproj
@@ -7,7 +7,7 @@
     <UserSecretsId>f89d9b5d-2482-40c6-baf2-7426fc1a6781</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-    <DockerfileContext>..\..</DockerfileContext>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
