--- a/Services/Checkout/Checkout.API/Dockerfile
+++ b/Services/Checkout/Checkout.API/Dockerfile
@@ -7,17 +7,17 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["CheckoutService/CheckoutService.API/CheckoutService.csproj", "CheckoutService/CheckoutService.API/"]
-COPY ["CheckoutService/CheckoutService.Domain/CheckoutService.Domain.csproj", "CheckoutService/CheckoutService.Domain/"]
-RUN dotnet restore "CheckoutService/CheckoutService.API/CheckoutService.csproj"
+COPY ["Services/Checkout/Checkout.API/Checkout.API.csproj", "Services/Checkout/Checkout.API/"]
+COPY ["Services/Checkout/Checkout.Domain/Checkout.Domain.csproj", "Services/Checkout/Checkout.Domain/"]
+RUN dotnet restore "Services/Checkout/Checkout.API/Checkout.API.csproj"
 COPY . .
-WORKDIR "/src/CheckoutService/CheckoutService.API"
-RUN dotnet build "CheckoutService.csproj" -c Release -o /app/build
+WORKDIR "/src/Services/Checkout/Checkout.API"
+RUN dotnet build "Checkout.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "CheckoutService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Checkout.API.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "CheckoutService.dll"]
+ENTRYPOINT ["dotnet", "Checkout.API.dll"]
