--- a/Services/Checkout/Checkout.API/appsettings.json
+++ b/Services/Checkout/Checkout.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "EventBus": {
     "Uri": "amqp://guest:guest@rabbitmq:5672",
-    "CheckoutDataQueue": "checkout-data"
+    "DefaultQueue": "checkout-data"
   },
   "Logging": {
     "LogLevel": {
