--- a/Services/Customer/Customer.Web/appsettings.json
+++ b/Services/Customer/Customer.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "EventBus": {
     "Uri": "amqp://guest:guest@rabbitmq:5672",
-    "CustomerDataQueue": "customer-data"
+    "DefaultQueue": "customer-data"
   },
   "Data": {
     "FilePath": "data/customers.csv"
