--- a/BuildingBlocks/EventBus.Messages/EventBus.Messages.csproj
+++ b/BuildingBlocks/EventBus.Messages/EventBus.Messages.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
   </ItemGroup>
 
