Restructure EventBus project.

--- a/Services/Checkout/Checkout.API/Checkout.API.csproj
+++ b/Services/Checkout/Checkout.API/Checkout.API.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BuildingBlocks\EventBus.Messages\EventBus.Messages.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\EventBus\EventBus.csproj" />
     <ProjectReference Include="..\Checkout.Domain\Checkout.Domain.csproj">
       <TreatAsUsed>true</TreatAsUsed>
     </ProjectReference>
