--- a/Services/Parser/DataParser/appsettings.json
+++ b/Services/Parser/DataParser/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
   "EventBus": {
     "Uri": "amqp://guest:guest@rabbitmq:5672",
     "DefaultQueue": "checkout-data",
